Fix unhighlighted gap when Settings is active.

--- a/src/Styles/MenuBar.less
+++ b/src/Styles/MenuBar.less
@@ -4,6 +4,7 @@
     top: 20px;
     height: 30px;
     border: 1px solid rgba(255,255,255,0.1);
+    padding-left: 9px;
 }
 
 .menu-bar-item {
@@ -17,6 +18,7 @@
     padding-right: 10px;
     cursor: pointer;
     border-right: @panel-element-border;
+    margin-left: -4px;
 }
 
 .menu-bar-item:last-child {
